...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/Course"
        app:layout_constraintStart_toStartOf="@+id/EditName"
        app:layout_constraintTop_toTopOf="@+id/courseName" />
    <TextView
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTimePeriod"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/SaveBut"
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:background="@drawable/savebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
...
