<resources>
    <string name="app_name">Project2_3</string>
    <string-array name="Course">
        <item>CSCI310</item>
        <item>CSCI356</item>
        <item>CSCI360</item>
        <item>CSCI201</item>
        <item>CSCI270</item>
        <item>CSCI104</item>
        <item>CSCI109</item>
        <item>CSCI103</item>
    </string-array>
    <string-array name="Day">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THUR</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>
    <string-array name="TimePeriod">
        <item>08:00-9:00</item>
        <item>09:00-10:00</item>
        <item>10:00-11:00</item>
        <item>11:00-12:00</item>
        <item>13:00-14:00</item>
        <item>14:00-15:00</item>
        <item>15:00-16:00</item>
        <item>16:00-17:00</item>
    </string-array>
</resources>
