...
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/listNotes"
        android:divider="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile"
        ></ListView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile"
        android:layout_width="165dp"
        android:layout_height="45dp"
...
