<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/EditPassword"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/TimePeriod"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TextRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Registration"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="First Name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <TextView
        android:id="@+id/TimePeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="Email Address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseName" />

    <TextView
        android:id="@+id/RegPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimePeriod" />

    <TextView
        android:id="@+id/RegConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:text="Confirm Password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegPassword" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="name"
        android:inputType="textLongMessage"
        app:layout_constraintBaseline_toBaselineOf="@+id/courseName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/EditConfirmPassword"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/RegConfirm"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="241dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/savebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="Username"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextRegistration" />

    <EditText
        android:id="@+id/EditUsername"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:hint="username"
        android:inputType="textLongMessage"
        app:layout_constraintBaseline_toBaselineOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/username" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditConfirmPassword">

        <RadioButton
            android:id="@+id/radioTutee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:checked="true"
            android:textSize="20sp"
            android:text="Tutee" />

        <RadioButton
            android:id="@+id/radioTutor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Tutor" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>

